fix(gui): fix the issue where the console cannot be opened